<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_bottom_sheet_attributes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorWhite">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_attributes_heading"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_sheet_peek_height"
        android:gravity="center"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:text="@string/timeline_attributes"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="0sp"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_attributes_heading" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="@id/text_attributes_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_attributes_heading"
        app:srcCompat="@drawable/ic_expand_less_black_24dp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/button_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_attributes_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_orientation_heading"
                style="@style/Heading"
                android:layout_marginTop="5dp"
                android:text="@string/orientation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_orientation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checkedButton="@id/rb_horizontal"
                android:orientation="horizontal"
                android:paddingStart="-5dp"
                android:paddingLeft="-5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_orientation_heading"
                tools:ignore="RtlSymmetry">

                <RadioButton
                    android:id="@+id/rb_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horizontal"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

                <RadioButton
                    android:id="@+id/rb_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginLeft="@dimen/padding"
                    android:text="@string/vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_marker_heading"
                style="@style/Heading"
                android:text="@string/marker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_orientation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_marker_size"
                style="@style/Label"
                android:text="@string/size"
                app:layout_constraintBottom_toBottomOf="@id/seek_marker_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seek_marker_size" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seek_marker_size"
                style="@style/DiscreteSeekBar"
                app:dsb_max="100"
                app:dsb_min="0"
                app:dsb_value="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_marker_size"
                app:layout_constraintTop_toBottomOf="@id/text_marker_heading" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_marker_color"
                style="@style/Label"
                android:text="@string/color"
                app:layout_constraintBottom_toBottomOf="@id/image_marker_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_marker_color" />

            <com.github.vipulasri.timelineview.sample.widgets.BorderedCircle
                android:id="@+id/image_marker_color"
                style="@style/BorderImageView"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                app:layout_constraintStart_toEndOf="@id/text_marker_color"
                app:layout_constraintTop_toBottomOf="@id/seek_marker_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_marker_in_center"
                style="@style/Label"

                android:text="@string/marker_in_center"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_marker_in_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/checkbox_marker_in_center" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_marker_in_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/text_marker_in_center"
                app:layout_constraintTop_toBottomOf="@id/image_marker_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_marker_line_padding"
                style="@style/Label"
                android:text="@string/line_padding"
                app:layout_constraintBottom_toBottomOf="@id/seek_marker_line_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seek_marker_line_padding" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seek_marker_line_padding"
                style="@style/DiscreteSeekBar"
                app:dsb_max="30"
                app:dsb_min="0"
                app:dsb_value="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_marker_line_padding"
                app:layout_constraintTop_toBottomOf="@id/checkbox_marker_in_center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_marker_drawable"
                style="@style/Label"
                android:layout_width="0dp"
                android:layout_marginTop="3dp"
                android:text="@string/marker_drawable_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_marker_line_padding" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_line_heading"
                style="@style/Heading"
                android:text="@string/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_marker_drawable" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_line_width"
                style="@style/Label"
                android:text="@string/width"
                app:layout_constraintBottom_toBottomOf="@id/seek_line_width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seek_line_width" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seek_line_width"
                style="@style/DiscreteSeekBar"
                app:dsb_max="30"
                app:dsb_min="0"
                app:dsb_value="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_line_width"
                app:layout_constraintTop_toBottomOf="@id/text_line_heading" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_start_line_color"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/start_line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_line_width" />

            <com.github.vipulasri.timelineview.sample.widgets.BorderedCircle
                android:id="@+id/image_start_line_color"
                style="@style/BorderImageView"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@id/text_start_line_color"
                app:layout_constraintStart_toEndOf="@id/text_start_line_color"
                app:layout_constraintTop_toTopOf="@id/text_start_line_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_end_line_color"
                style="@style/Label"
                android:layout_marginTop="8dp"
                android:text="@string/end_line_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_start_line_color" />

            <com.github.vipulasri.timelineview.sample.widgets.BorderedCircle
                android:id="@+id/image_end_line_color"
                style="@style/BorderImageView"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/text_end_line_color"
                app:layout_constraintTop_toBottomOf="@id/image_start_line_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_line_type"
                style="@style/Label"
                android:text="@string/style"
                app:layout_constraintBottom_toBottomOf="@id/spinner_line_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinner_line_type" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_line_type"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/line_type"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toEndOf="@id/text_line_type"
                app:layout_constraintTop_toBottomOf="@id/image_end_line_color" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_line_dash_width"
                style="@style/Label"
                android:layout_marginTop="5dp"
                android:text="@string/dash_length"
                app:layout_constraintBottom_toBottomOf="@id/seek_line_dash_width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seek_line_dash_width" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seek_line_dash_width"
                style="@style/DiscreteSeekBar"
                app:dsb_max="30"
                app:dsb_min="0"
                app:dsb_value="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_line_dash_width"
                app:layout_constraintTop_toBottomOf="@id/spinner_line_type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_line_dash_gap"
                style="@style/Label"
                android:layout_marginTop="5dp"
                android:text="@string/dash_gap"
                app:layout_constraintBottom_toBottomOf="@id/seek_line_dash_gap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seek_line_dash_gap" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seek_line_dash_gap"
                style="@style/DiscreteSeekBar"
                app:dsb_max="30"
                app:dsb_min="0"
                app:dsb_value="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_line_dash_gap"
                app:layout_constraintTop_toBottomOf="@id/seek_line_dash_width" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestedScrollView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/padding"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/apply"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestedScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>